# perloxide

./: Cargo.toml
crates/perl-value/src/: scalar.rs  value.rs
docs/: design.md
perl-core/: Cargo.toml
perl-core/src/: cell.rs  cow_buffer.rs  flags.rs  lib.rs  payload.rs  perl_string.rs  scalar.rs  small_string.rs  string.rs  string_slot.rs  value.rs
perl-parser/: Cargo.toml
perl-parser/src/: ast.rs  error.rs  expect.rs  keyword.rs  lexer.rs  lib.rs  parser.rs  pragma.rs  source.rs  span.rs  symbol.rs  token.rs
perl-parser/src/tests/: lexer_tests.rs  parser_tests.rs  pragma_tests.rs  source_tests.rs  symbol_tests.rs
