[workspace]
members = [
#    "perl",
#    "perl-compiler",
    "perl-core",
    "perl-parser",
#    "perl-regex",
#    "perl-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
bytes                 = "1.11.1"
memchr                = "2.8.0"
unicode-normalization = "0.1.25"
unicode-xid           = "0.2.6"
unicode_names2        = "2.0.0"
