[workspace]
members = [
#    "perl",
#    "perl-compiler",
    "perl-core",
    "perl-parser",
#    "perl-regex",
#    "perl-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
bytes                 = "1.11.1"
memchr                = "2.8.0"
parking_lot           = "0.12.5"
phf                   = { version = "0.13.1", features = ["macros"] }
phf_codegen           = "0.13.1"
phf_generator         = "0.13.1"
phf_macros            = "0.13.1"
phf_shared            = "0.13.1"
unicode-normalization = "0.1.25"
unicode-xid           = "0.2.6"
unicode_names2        = "2.0.0"
